# favor-poc-backend

./: .gitignore  app.py  pyproject.toml
config/: __init__.py  env.py
utils/: crawler.py  openai.py
