[tool.poetry]
name = "favor-poc-backend"
version = "0.1.0"
description = ""
authors = ["An-Ting Hsu <andyhsu10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
bs4 = "^0.0.1"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
